// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<TruckingDisplayPanel
  adminDispatch={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
  truckingInstance={
    Object {
      "truckingPricing": Object {
        "fees": Object {},
        "rates": Object {},
      },
    }
  }
>
  <div
    className="flex-90 layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-start-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center layout-wrap margin_bottom margin_top_align"
      >
        <h4
          className="flex-none clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
        <div
          className="flex-5"
        />
      </div>
    </div>
    <style>
      
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          undefined 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: rgba(0, 0, 0, 0.75);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
    </style>
  </div>
</TruckingDisplayPanel>
`;

exports[`truckingPricing.city is truthy 1`] = `
<TruckingDisplayPanel
  adminDispatch={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
  truckingInstance={
    Object {
      "city": Array [
        Array [
          "CITY",
        ],
      ],
      "truckingPricing": Object {
        "fees": Object {},
        "rates": Object {},
      },
    }
  }
>
  <div
    className="flex-90 layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-start-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center layout-wrap margin_bottom margin_top_align"
      >
        <h4
          className="flex-none clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        >
          City
        </h4>
        <div
          className="flex-5"
        />
        CITY
      </div>
    </div>
    <style>
      
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          undefined 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: rgba(0, 0, 0, 0.75);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
    </style>
  </div>
</TruckingDisplayPanel>
`;

exports[`truckingPricing.distance is truthy 1`] = `
<TruckingDisplayPanel
  adminDispatch={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
  truckingInstance={
    Object {
      "distance": Array [
        Array [
          "DISTANCE",
        ],
      ],
      "truckingPricing": Object {
        "fees": Object {},
        "rates": Object {},
      },
    }
  }
>
  <div
    className="flex-90 layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-start-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center layout-wrap margin_bottom margin_top_align"
      >
        <h4
          className="flex-none clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        >
          Distance
        </h4>
        <div
          className="flex-5"
        />
        DISTANCE
      </div>
    </div>
    <style>
      
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          undefined 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: rgba(0, 0, 0, 0.75);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
    </style>
  </div>
</TruckingDisplayPanel>
`;

exports[`truckingPricing.fees is truthy 1`] = `
<TruckingDisplayPanel
  adminDispatch={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
  truckingInstance={
    Object {
      "truckingPricing": Object {
        "fees": Object {
          "foo": Object {
            "currency": "CURRENCY",
            "rate_basis": "RATE",
          },
        },
        "rates": Object {},
      },
    }
  }
>
  <div
    className="flex-90 layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-start-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center layout-wrap margin_bottom margin_top_align"
      >
        <h4
          className="flex-none clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
        <div
          className="flex-5"
        />
      </div>
      <div
        className="flex-90 layout-row layout-wrap layout-align-start-center trucking_cell"
      >
        <div
          className="flex-100 layout-row layout-wrap"
        >
          <div
            className="range_header flex-100 layout-row layout-align-start-center"
          >
            <img
              alt="Group_5"
              border="0"
              src="https://assets.itsmycargo.com/assets/icons/rates.png"
            />
            <p
              className="flex no_m"
            >
              undefined
               Rates:
            </p>
            <div
              className="flex-15 layout-row layout-align-end-center"
              onClick={[Function]}
            >
              <i
                className="fa fa-edit pointy"
                style={
                  Object {
                    "color": "#BDBDBD",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div
          className="flex-100 layout-row layout-align-space-between-center layout-wrap margin_bottom"
        >
          <div
            className="flex-100 layout-row layout-align-space-between-center range_cell"
          >
            <div
              className="flex-100 layout-row layout-align-start-center price_subheader"
            >
              <p
                className="flex-none"
              >
                 - 
              </p>
            </div>
            <div
              className="flex-100 layout-row layout-align-start-center"
            >
              <div
                className="flex-25 layout-row layout-wrap layout-align-none-center price_cell"
              >
                <p
                  className="flex-100 center"
                >
                  Rate Basis
                  :
                </p>
                <p
                  className="flex-100 center"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <style>
      
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          undefined 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: rgba(0, 0, 0, 0.75);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
    </style>
  </div>
</TruckingDisplayPanel>
`;

exports[`truckingPricing.zipcode is truthy 1`] = `
<TruckingDisplayPanel
  adminDispatch={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
  truckingInstance={
    Object {
      "truckingPricing": Object {
        "fees": Object {},
        "rates": Object {},
      },
      "zipcode": Array [
        Array [
          "ZIPCODE",
        ],
      ],
    }
  }
>
  <div
    className="flex-90 layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-start-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center layout-wrap margin_bottom margin_top_align"
      >
        <h4
          className="flex-none clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        >
          Zipcode
        </h4>
        <div
          className="flex-5"
        />
        ZIPCODE
      </div>
    </div>
    <style>
      
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          undefined 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: rgba(0, 0, 0, 0.75);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
    </style>
  </div>
</TruckingDisplayPanel>
`;
